# pose_detection_tflite

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml  scripts.txt
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hugocornellier/face_detection_tflite/: FaceDetectionTflitePlugin.kt
android/src/test/kotlin/com/hugocornellier/face_detection_tflite/: FaceDetectionTflitePluginTest.kt
android/src/test/kotlin/com/hugocornellier/pose_detection_tflite/: PoseDetectionTflitePluginTest.kt
assets/screenshots/: all-sample-images-are-royalty-free.txt
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  test.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: face_detection_tflite.podspec
ios/Classes/: FaceDetectionTflitePlugin.swift  PoseDetectionTflitePlugin.swift
lib/: pose_detection_tflite.dart
lib/src/: dart_registration.dart  face_detection_model.dart  face_detector.dart  face_landmark.dart  helpers.dart  image_utils.dart  iris_landmark.dart  person_detector.dart  pose_detector.dart  types.dart  types_and_consts.dart
linux/: CMakeLists.txt  face_detection_tflite_plugin.cc  face_detection_tflite_plugin_private.h  pose_detection_tflite_plugin.cc  pose_detection_tflite_plugin_private.h
linux/include/face_detection_tflite/: face_detection_tflite_plugin.h
linux/test/: face_detection_tflite_plugin_test.cc  pose_detection_tflite_plugin_test.cc
macos/: face_detection_tflite.podspec
macos/Classes/: FaceDetectionTflitePlugin.swift  PoseDetectionTflitePlugin.swift
test/: test_config.dart
windows/: CMakeLists.txt  face_detection_tflite_plugin.cpp  face_detection_tflite_plugin.h  face_detection_tflite_plugin_c_api.cpp  pose_detection_tflite_plugin.cpp  pose_detection_tflite_plugin.h  registration.cpp
windows/cmake/: copy_to_runner_blobs.cmake
windows/include/face_detection_tflite/: face_detection_tflite_plugin.h  face_detection_tflite_plugin_c_api.h
windows/include/pose_detection_tflite/: pose_detection_tflite_plugin.h
windows/test/: face_detection_tflite_plugin_test.cpp
(+1 files in other folders)
